turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:36: error: ')' expected but identifier found.
  state = rule(state)(nbcolor)(2)
  ^